--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<section id="sec">
+
+</section>
 
 
 <script src="script.js"></script>
