--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>PrimeNumbers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section id="sec">
 
-</section>
-
-
-<script src="script.js"></script>
-
+<div>
+    <label for="input"></label><input id="input" type="number">
+    <button id="btn">calculate</button>
+    <h3 id="zx1">Zoom x1</h3>
+    <h3 id="zx2">Zoom x2</h3>
+    <h3 id="zx4">Zoom x4</h3>
+    <h3 id="zx8">Zoom x8</h3>
+</div>
+<canvas id="primeCanvas"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
