--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 
+
 <div>
-    <label for="input"></label><input id="input" type="number">
+    <h1>Polar Visualization of Primes</h1>
+    <label for="input"></label><input placeholder="range" id="input" type="number">
     <button id="btn">calculate</button>
-    <h3 id="zx1">Zoom x1</h3>
-    <h3 id="zx2">Zoom x2</h3>
-    <h3 id="zx4">Zoom x4</h3>
-    <h3 id="zx8">Zoom x8</h3>
+    <button id="zx2">Zoom Inn</button>
+    <button id="zx1">Zoom Out</button>
+    <h2 id="primeNumber">Number of primes  between 0-0 = 0</h2>
+    <h3>Visualizing prime numbers on a polar coordinate system reveals intriguing patterns, showcasing the distribution of these unique integers. The circular arrangement highlights the inherent structure of prime numbers, offering a captivating perspective on their mathematical nature.</h3>
 </div>
 <canvas id="primeCanvas"></canvas>
     <script src="script.js"></script>
